[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
psycopg = {extras = ["binary"], version = "^3.2.4"}
swarms = "^6.9.8"
openai = "^1.60.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
setuptools = "^75.8.0"
psutil = "^6.1.1"
toml = "^0.10.2"
litellm = "^1.59.8"
langchain = "^0.3.15"
loguru = "^0.7.3"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
